--- a/index.html
+++ b/index.html
@@ -3,45 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Jono.bio</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Montserrat:wght@700&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<script type="x-shader/x-vertex" id="vertexshader">
-
-  attribute float size;
-  attribute vec3 customColor;
-  varying vec3 vColor;
-
-  void main() {
-
-    vColor = customColor;
-    vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
-    gl_PointSize = size * ( 300.0 / -mvPosition.z );
-    gl_Position = projectionMatrix * mvPosition;
-
-  }
-
-</script>
-<script type="x-shader/x-fragment" id="fragmentshader">
-
- uniform vec3 color;
- uniform sampler2D pointTexture;
-
- varying vec3 vColor;
-
- void main() {
-
-   gl_FragColor = vec4( color * vColor, 1.0 );
-   gl_FragColor = gl_FragColor * texture2D( pointTexture, gl_PointCoord );
-
- }
-</script>
-
-<div id="magic"></div>
+<div class="wrapper">
+  <h1 class="title">Tasty<h1>
+</div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
